# OspreyProject_Slac

./: .gitignore  CMakeLists.txt  README.md  setup.md
.github/workflows/: build.yml  ci.yml  code-quality.yml  dependency-update.yml  performance-benchmark.yml  slac-integration.yml
DataProvider/: .gitignore  CMakeLists.txt  build_dp.sh
DataProvider/apps/: DataProvider_CLI.cpp  annotation.cpp  archiver_to_dp.cpp  cli.cpp  create_dataset.cpp  data_decoder.cpp  epics_to_dp.cpp  epics_to_mongo.cpp  exporter.cpp  h5_to_dp.cpp  h5_to_dp_bare.cpp  h5_to_dp_bare_optimal.cpp  mainh5.cpp  mainh5og_backup.cpp  mainog_backup.cpp  manage_annotations.cpp  mongo_to_npy.cpp  query.cpp  query_data.cpp  query_metadata.cpp  query_mongo.cpp  query_pv.cpp  query_state.cpp
DataProvider/config/: ingestion_config.json
DataProvider/config/dictionaries/: coordinate_systems.json  device_classifications.json  epics_record_types.json  lcls_beamline_boundaries.json
DataProvider/examples/: spatial_enrichment_demo.cpp  spatial_query_demo.cpp
DataProvider/include/: data_exporter.hpp  data_exporter.hpp.backup  h5_parser.hpp  ingest_client.hpp  query_client.hpp
DataProvider/include/clients/: annotation_client.hpp  archiver_client.hpp  common_client.hpp  ingest_client.hpp  metadata_recovery.hpp  query_client.hpp  spatial_analyzer.hpp
DataProvider/include/parsers/: data_decoder.hpp  epics_archiver.hpp  epics_parser.hpp  h5_parser.hpp  mongo_to_npy_parser.hpp
DataProvider/old_cmake_for_ref/: CMakeLists.txt
DataProvider/proto/: CMakeLists.txt  annotation.proto  common.proto  ingestion.proto
DataProvider/src/: h5_parser.cpp  ingest_client.cpp  mongo_to_npy_parser.cpp  query_client.cpp
DataProvider/src/clients/: annotate_client.cpp  annotation_client.cpp  archiver_client.cpp  common_client.cpp  ingest_client.cpp  metadata_recovery.cpp  query_client.cpp  spatial_analyzer.cpp
DataProvider/src/parsers/: data_decoder.cpp  epics_archiver.cpp  epics_parser.cpp  h5_parser.cpp
client/: CMakeLists.txt
client/src/: PacketParser.cpp  PacketParser.h  ingest_client.hpp  main.cpp
client/src/HDF5/: HDF5_Parser.cpp  HDF5_Parser.hpp
data-platform/: README.env
data-platform/config/: dp.yml  envoy.mac.yaml  envoy.yaml  log4j2.xml
data-platform/javascript/: annotation_grpc_web_pb.js  annotation_pb.js  common_pb.js  query_grpc_web_pb.js  query_pb.js
data-platform/proto/: annotation.proto  common.proto  ingestion.proto  ingestion_stream.proto  query.proto
data-platform/templates/: dp.env  reboot-cron
proto/: CMakeLists.txt  common.proto
